<resources>
    <string name="app_name">MyProject</string>

    <!-- Activities -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_super_home">SuperHomeActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="title_activity_list_automatons">ListAutomatonsActivity</string>
    <string name="title_activity_automaton_pills">AutomatonPillsActivity</string>
    <string name="title_activity_automaton_liquid">AutomatonLiquidActivity</string>
    <string name="title_activity_create_automaton">CreateAutomatonActivity</string>
    <string name="title_activity_modify_automaton">ModifyAutomatonActivity</string>


    <!-- Adapter -->
    <string name="read">Lecture seule</string>
    <string name="read_write">Lecture-Écriture</string>
    <string name="super_user">Super-utilisateur</string>
    <string name="pills">Conditionnement de comprimés</string>
    <string name="liquid">Asservissement de niveau de liquide</string>
    <string name="email">Email</string>
    <string name="rights">Droits</string>
    <string name="name">Nom</string>
    <string name="type">Type</string>
    <string name="ip">IP</string>
    <string name="rack">Rack</string>
    <string name="slot">Slot</string>
    <string name="databloc">Databloc</string>


    <!-- Alert dialogs -->
    <string name="logout_title">Déconnexion</string>
    <string name="change_password_title">Modifier le mot de passe</string>
    <string name="change_rights_title">Modifier les droits</string>
    <string name="delete_title">Suppression</string>
    <string name="logout_message">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="change_password_message">Veuillez entrer votre nouveau mot de passe</string>
    <string name="delete_user_message">Voulez-vous vraiment supprimer l\'utilisateur ?</string>
    <string name="delete_automaton_message">Voulez-vous vraiment supprimer l\'automate ?</string>
    <string name="yes_button">Oui</string>
    <string name="save_button">Enregistrer</string>
    <string name="no_button">Non</string>
    <string name="cancel_button">Annuler</string>


    <!-- Buttons -->
    <string name="inscription">Inscription</string>
    <string name="connection">Connexion</string>
    <string name="superHome_users">Modifier les utilisateurs</string>
    <string name="home_seeAutomatons">Voir les automates</string>
    <string name="gerer">Gérer</string>


    <!-- Inputs -->
    <string name="email_address">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="lastname">Nom de famille</string>
    <string name="firstname">Prénom</string>
    <string name="ip_address">Adresse IP</string>

    <!-- Spinners (Dropdown lists) -->
    <string-array name="automaton_types_arrays">
        <item>Conditionnement de comprimés</item>
        <item>Asservissement de niveau de liquide</item>
    </string-array>
    <string name="automaton_types_prompt">Choisissez un type</string>


    <!-- Texts -->
    <string name="connected_as">Connecté en tant que</string>
    <string name="there_is">Il y a</string>
    <string name="superHome_users_text1">utilisateurs dont :</string>
    <string name="superHome_users_text2">avec un accès en lecture seule;</string>
    <string name="superHome_users_text3">avec un accès en lecture et écriture.</string>
    <string name="home_users_text1">automates dont :</string>
    <string name="home_users_text2">pour le</string>
    <string name="home_users_text3">pour l\'</string>
    <string name="login">Connexion</string>
    <string name="not_connected">Non connecté</string>
    <string name="connected_by">Connecté par</string>
    <string name="to_automaton">à l\'automate.</string>
    <string name="connected_automaton">Connecté par \' %s \' au réseau.</string>
    <string name="pills_service">En service : %s</string>
    <string name="pills_bottlesComing">Arrivée de flacons vides : %s</string>
    <string name="pills_wantedPills">Nombre de comprimés demandés : %s</string>
    <string name="pills_pills">Comprimés mis en flacon : %s</string>
    <string name="pills_bottles">Flacons remplis : %s</string>
    <string name="liquid_valveMA">Manuelle/Automatique : %s</string>
    <string name="liquid_valves12">Valve 1 : %s; Valve 2 : %s</string>
    <string name="liquid_valves34">Valve 3 : %s; Valve 4 : %s</string>
    <string name="liquid_level">Niveau de liquide : %s</string>
    <string name="liquid_consignes">Consigne Auto : %s; Consigne Manuelle : %s</string>
    <string name="liquid_pilotageVanne">Mot de pilotage vanne : %s</string>


    <!-- Titles -->
    <string name="login_title">Identification</string>
    <string name="register_title">Enregistrement</string>
    <string name="welcome_title">Bienvenue !</string>
    <string name="listUsers_title">Liste des utilisateurs</string>
    <string name="listAutomatons_title">Liste des automates</string>
    <string name="new_automaton_title">Nouvel automate</string>
    <string name="modify_automaton_title">Modifier l\'automate</string>


    <!-- Toasts -->
    <string name="no_user">⚠️ L\'utilisateur n\'existe pas ! ⚠️ </string>
    <string name="empty_input">⚠️️ Veuillez compléter le champ ! ⚠️ </string>
    <string name="empty_inputs">⚠️️ Veuillez compléter tous les champs ! ⚠️ </string>
    <string name="error_input">⚠️️ Veuillez vérifier les champs erronés ! ⚠️ </string>
    <string name="created_user">✔️ L\'utilisateur a bien été créé ! ✔️ </string>
    <string name="wrong_format">Format incorrect !</string>
    <string name="wrong_email_format">Format d\'email incorrect !</string>
    <string name="already_used_email">Cette adresse est déjà utilisée !</string>
    <string name="password_format">Minimum 4 caractères, au moins 1 majuscule, 1 minuscule et 1 chiffre.</string>
    <string name="impossible_connection">⚠️ Connexion réseau IMPOSSIBLE ⚠️ </string>
    <string name="already_used_name">Ce nom est déjà utilisé !</string>
    <string name="wrong_ip_format">Format d\'IP incorrect !</string>
    <string name="wrong_rack_slot_format">La valeur doit être entre 0 et 3.</string>
    <string name="wrong_databloc_format">Format de databloc incorrect !</string>
    <string name="created_automaton">✔️ L\'automate a bien été créé ! ✔️ </string>
    <string name="modified_automaton">✔️ L\'automate a bien été modifié ! ✔️ </string>
    <string name="written_data">✔️ La valeur a bien été écrite ! ✔️ </string>

</resources>
