<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="be.heh.auth.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_login" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_marginTop="50dp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_login_register"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:onClick="onLoginClickManager"
            android:textColor="@color/blue"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection"
            android:onClick="onLoginClickManager" />

    </LinearLayout>

</LinearLayout>
