<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_gradient"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="be.heh.automatons.AutomatonPillsActivity">

    <TextView
        android:id="@+id/tv_automatonPills_connected"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_automatonPills_status"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/pills"
        android:textAlignment="center"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_automatonPills_plc"
        android:layout_marginTop="20dp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/not_connected"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_automatonPills_service"
        android:layout_marginTop="40dp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_automatonPills_bottlesComing"
        android:layout_marginTop="7dp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_automatonPills_wantedPills"
        android:layout_marginTop="25dp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_automatonPills_pills"
        android:layout_marginTop="7dp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_automatonPills_bottles"
        android:layout_marginTop="25dp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_automatonPills_manage"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gerer"
        android:onClick="onAutomatonClickManager"
        android:textColor="@color/darkGreen"
        android:background="@android:color/transparent" />

</LinearLayout>
